fix: Tabs visibility issue

--- a/src/app/modules/auth/containers/auth-shell/auth-shell.component.scss
+++ b/src/app/modules/auth/containers/auth-shell/auth-shell.component.scss
@@ -4,6 +4,7 @@
 
     &.google {
         --background: white;
+        --color: black;
     }
 
     &.email {
